@@ -47,7 +47,7 @@ def List(url, page=0):
 
 @site.register()
 def Playvid(url, name, download=None):
-    vp = utils.VideoPlayer(name)
+    vp = utils.VideoPlayer(name, download)
     vp.progress.update(25, "[CR]Loading video page[CR]")
     vidsite = utils.getHtml(url, site.url)
     video = re.compile(r'video">.+?src="([^"]+)', re.DOTALL | re.IGNORECASE).findall(vidsite)[0]
