@@ -177,7 +177,7 @@ def PTList(url, page=1):
 
 @site.register()
 def PTPlayvid(url, name, download=None):
-    vp = utils.VideoPlayer(name)
+    vp = utils.VideoPlayer(name, download)
     vp.progress.update(25, "[CR]Loading video page[CR]")
 
     hdr = dict(utils.base_hdrs)
