@@ -2,3 +2,5 @@
 Txxx network sites: added alphabet filter for models
 added: vjav.com
 added: shemalez.com
+download fixed for: porntrex, javbangers, daftsex
+added: xmoviesforyou
